--- a/gesture-recognition/runFolder/readme
+++ b/gesture-recognition/runFolder/readme
@@ -1,2 +1,2 @@
 Dossier où netbeans est configuré pour lancer l'éxecutable
-lorsque l'on lui demande de le lance.
+lorsque l'on lui demande de le lancer.
