Changed function to detect hand side.

--- a/gesture-recognition/runFolder/readme
+++ b/gesture-recognition/runFolder/readme
@@ -1,2 +1,1 @@
-Dossier où netbeans est configuré pour lancer l'éxecutable
-lorsque l'on lui demande de le lancer.
+Dossier qui était précédemment configuré dans Netbeans pour être le dossier d'éxecution du programme. Plus maintenant parce que Netbeans est con :).
