--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -3,6 +3,7 @@
 \usepackage[frenchb]{babel}
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{pgffor}
 \usepackage[hidelinks]{hyperref}
 
 \title{Détection de signes de la main à partir d'une image de profondeur}
