--- a/rapport/conclusion.tex
+++ b/rapport/conclusion.tex
@@ -1,1 +1,4 @@
 \section*{Conclusion}
+Ce projet de traitement d’image nous a permis de mettre en œuvre les connaissances acquises durant ce semestre. Il nous a permis également de concevoir et développer un système de reconnaissance d’image depuis la base d’acquisition jusqu’à la phase décisionnelle associée au système de reconnaissance. 
+Après avoir effectué un état de l’art, nous avons eu loisir de nous confronter aux problématiques de segmentation d’images et de reconnaissances de forme en développant différents classifieurs combinés dans un système de reconnaissance de signes de la main. Chaque phase de développent associée à une étape du système de reconnaissance, comme la segmentation, la classification ou encore l’algorithme de suivi de la main dans une séquence d’images, ont tous sollicité la théorie émise durant les cours ainsi que notre intérêt à relever un défit. Si notre projet présente des résultats discutables, notre implication dans ce dernier elle ne l’est pas, et nous apprécions le fait d’avoir pu apprendre à développer au sein des UV IN52 et IN54 des méthodes de traitement de l’image.
+Nous sommes par ailleurs également satisfaits d’avoir pu apprendre à utiliser la bibliothèque de traitement d’images en temps réel : OpenCV.
