--- a/rapport/classifieurConvexites.tex
+++ b/rapport/classifieurConvexites.tex
@@ -1,7 +1,8 @@
 \subsection{Classifieur de convexité}
-\subsubsection{Présentation}
+\subsubsection{Etat de l'art}
+Ce classifieur est basé sur le rapport « Hand Gesture Recognition Using Kinect » de Heng Du et TszHang To de l’Université de Boston \cite{hengDuEtAl}.  Leurs travaux ont portés sur la reconnaissance de nombre de doigts à partir d’une image capturé à l’aide d’une caméra kinect et de la bibliothèque OpenCV. 
 
-Ce classifieur est basé sur le rapport « Hand Gesture Recognition Using Kinect » de Heng Du et TszHang To de l’Université de Boston.  Leurs travaux ont portés sur la reconnaissance de nombre de doigts à partir d’une image capturé à l’aide d’une caméra kinect et de la bibliothèque OpenCV. 
+\subsubsection{Présentation}
 
 Le principe général de ce classifieur est de détecter les points de convexités et de concavités du contour de la main et ainsi selon un raisonnement logique, calculer le nombre de doigts levés.
 
