--- a/rapport/conclusion.tex
+++ b/rapport/conclusion.tex
@@ -1,4 +1,8 @@
 \section*{Conclusion}
-Ce projet de traitement d’image nous a permis de mettre en œuvre les connaissances acquises durant ce semestre. Il nous a permis également de concevoir et développer un système de reconnaissance d’image depuis la base d’acquisition jusqu’à la phase décisionnelle associée au système de reconnaissance. 
-Après avoir effectué un état de l’art, nous avons eu loisir de nous confronter aux problématiques de segmentation d’images et de reconnaissances de forme en développant différents classifieurs combinés dans un système de reconnaissance de signes de la main. Chaque phase de développent associée à une étape du système de reconnaissance, comme la segmentation, la classification ou encore l’algorithme de suivi de la main dans une séquence d’images, ont tous sollicité la théorie émise durant les cours ainsi que notre intérêt à relever un défit. Si notre projet présente des résultats discutables, notre implication dans ce dernier elle ne l’est pas, et nous apprécions le fait d’avoir pu apprendre à développer au sein des UV IN52 et IN54 des méthodes de traitement de l’image.
-Nous sommes par ailleurs également satisfaits d’avoir pu apprendre à utiliser la bibliothèque de traitement d’images en temps réel : OpenCV.
+Ce projet de traitement dâ€™image nous a permis de mettre en Å“uvre les connaissances acquises durant ce semestre. Il nous a permis Ã©galement de concevoir et dÃ©velopper un systÃ¨me de reconnaissance dâ€™image depuis la base dâ€™acquisition jusquâ€™Ã  la phase dÃ©cisionnelle associÃ©e au systÃ¨me de reconnaissance. 
+
+AprÃ¨s avoir effectuÃ© un Ã©tat de lâ€™art, nous avons eu loisir de nous confronter aux problÃ©matiques de segmentation dâ€™images et de reconnaissances de forme en dÃ©veloppant diffÃ©rents classifieurs combinÃ©s dans un systÃ¨me de reconnaissance de signes de la main. Chaque phase de dÃ©veloppent associÃ©e Ã  une Ã©tape du systÃ¨me de reconnaissance, comme la segmentation, la classification ou encore lâ€™algorithme de suivi de la main dans une sÃ©quence dâ€™images, ont tous sollicitÃ© la thÃ©orie Ã©mise durant les cours ainsi que notre intÃ©rÃªt Ã  relever un dÃ©fit. Si notre projet prÃ©sente des rÃ©sultats discutables, notre implication dans ce dernier elle ne lâ€™est pas, et nous apprÃ©cions le fait dâ€™avoir pu apprendre Ã  dÃ©velopper au sein des UV IN52 et IN54 des mÃ©thodes de traitement de lâ€™image.
+
+Nous nâ€™avons malheureusement pas eu le temps dâ€™associer la reconnaissance au suivi de la main dans une sÃ©quence image, qui nâ€™aurait de toute maniÃ¨re pas donnÃ© de rÃ©sultats probants. Cependant, une Ã©volution possible de notre programme serait de rÃ©cupÃ©rer le flux de la camÃ©ra et de rÃ©aliser une reconnaissance en temps rÃ©el des signes de la main rÃ©alisÃ©s par un utilisateur filmÃ©. Nous avons conduit notre projet en considÃ©rant cet objectif comme une fin.
+
+Nous sommes par ailleurs Ã©galement satisfaits dâ€™avoir pu apprendre Ã  utiliser la bibliothÃ¨que de traitement dâ€™images en temps rÃ©el : OpenCV.
