--- a/rapport/introduction.tex
+++ b/rapport/introduction.tex
@@ -1,1 +1,8 @@
 \section*{Introduction}
+Dans le cadre des UV IN52 et IN54, nous avons développé un programme nous permettant de mettre à profit les compétences acquises à travers ces UV. Le présent rapport fait état du travail réalisé. L'objectif du programme développé est la reconnaissance de forme au sein d'une image. Plus précisément, il s'agissait d'extraire une main au sein d'images en niveaux de gris de type carte de profondeur, puis de traiter ces images afin de déterminer le nombre de doigts que ces mains présentent.
+
+Pour ce faire, nous avons effectué plusieurs traitements sur les images, que nous présenterons par parties. La première s’intéresse aux différents traitements effectués afin de segmenter l’image originale pour permettre son interprétation.
+
+Dans une seconde partie, nous présenterons les classifieurs développés afin d’interpréter l’image segmentée, mais également les méthodes de décision associées aux différents classifieurs ainsi que les résultats obtenus par ces derniers.
+
+Enfin, nous avons mis en œuvre une méthode permettant un suivi temporel d’une main dans une succession d’images. Les algorithmes développés seront présenté dans une dernière partie.
