--- a/rapport/segmentation.tex
+++ b/rapport/segmentation.tex
@@ -91,7 +91,7 @@ Après une batterie de tests, cette limite a été fixée à $5$. En dessous, la
 \subsection{Analyse des résultats}
 Cette méthode de segmentation se trouve être efficace sur la majorité des images fournies dans la base. Voici un panel de test réalisé sur l’ensemble des images du groupe $1$ :
 
-\foreach \n in {1,...,16}{
+\foreach \n in {2,3,5,6}{
 \centerline{
 \includegraphics[scale=0.6]{segIn\n.png}
 \includegraphics[scale=0.6]{segOut\n.jpg}
@@ -100,8 +100,8 @@ Cette méthode de segmentation se trouve être efficace sur la majorité des ima
 
 Le taux de réussite s’avère très correct puisque 13 images sur 16 sont traitées correctement. On observe des erreurs dans deux cas : 
 \begin{itemize}
-\item Lorsqu’il n’y a pas de main ($3^{eme}$ image)
-\item Lorsque la main n’est pas en avant-plan (images 2 et 6).
+\item Lorsqu’il n’y a pas de main ($2^{eme}$ image)
+\item Lorsque la main n’est pas en avant-plan (images 1 et 4).
 \end{itemize}
 
 Dans les deux cas, l’algorithme doit être en mesure de détecter que l’étape de segmentation n’a pas été optimale, dans la mesure où la reconnaissance ne renverra pas de résultat. L’algorithme de segmentation ne peut cependant pas être corrigé simplement pour palier les problèmes et lorsqu’une main est effectivement présente dans l’image, il n’est actuellement pas en mesure de se focaliser sur cette dernière pour l’extraire. Une telle solution n’a pas été implémentée par manque de temps et également cela demeure un cas très particulier. En effet dans une application de suivi de la main et de reconnaissance de geste, il est évident que l’homme qui effectue les gestes va instinctivement placer les mains devant son corps et non l’inverse.
